kuber-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-team-master-service
spec:
  selector:
    app: project-team-master
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
